syntax = "proto3";
package UserPackage;

message User { 
    string _id = 1;
    string email = 2;
    string username = 3;
    string mobile = 4;
    string Role = 5;
    string password = 6;   
    repeated string bills = 7;   
}
message UserList {
    repeated User users = 1;
}
message Empty{}
message Result { 
    string status = 1;
}
service UserService {
    rpc getListOfUser (Empty) returns (UserList);
    rpc UpdateUser (User) returns (Result);
}

